# maestro-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TOOLS.md  cloudflared-maestro.service.example  fleet-ssh.service  fleet_oauth.py  fleet_oauth.py.bak  hosts.example.yaml  maestro.service  maestro.service.example  maestro_oauth.py  oauth_rewrite.py  pyproject.toml  requirements.txt  server.py  server.py.pre-orchestra
docs/adr/: 0001-agent-routing.md
journal/: 2026-02-27-transfer-relay.md  2026-03-03-security-audit-v1.md  2026-03-05-adr-0002-single-shot-dispatch.md  2026-03-05-security-audit-v2.md  2026-03-06-auto-promote.md
maestro/: config.py  hosts.py  local.py  oauth_state.py  relay.py  transport.py
maestro/tools/: fleet.py
tests/: test_oauth.py  test_primitives.py
