[project]
name = "maestro-mcp"
version = "0.1.0"
description = "Multi-host machine fleet + AI agent orchestra MCP server"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "pydantic>=2.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/rmstxrx/maestro-mcp"
